--- a/shangcheng/package.json
+++ b/shangcheng/package.json
@@ -7,13 +7,17 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.22.0",
+    "axois": "0.0.1-security",
     "core-js": "^3.6.5",
     "echarts": "^4.1.0",
     "element-ui": "^2.15.1",
     "vue": "^2.6.11",
+    "vue-axios": "^3.3.7",
     "vue-router": "^3.2.0",
     "vue-wechat-title": "^2.0.7",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "webpack-dev-server": "^4.3.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
